--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="abovebanner"> 
 			<div class="header"> 
 				
-					<img src="images/logo.png" class="logo" alt="Bleiss" />
+					<img src="https://user-images.githubusercontent.com/34121060/33794978-50275462-dcfc-11e7-94be-9c6867ea6a93.png" class="logo" alt="Bleiss" />
 				
 				<p class="line1">Wholesale Dealer | Branded Perfume</p>
 			</div> 	
